Add user id header to account base creation methods